# quant-t-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
a-share-market-structure-analyzer/: SKILL.md
a-share-market-structure-analyzer/agents/: openai.yaml
a-share-market-structure-analyzer/examples/: cambridge-example.md  jiayuan-example.md  position-risk-example.md
a-share-market-structure-analyzer/references/: chip-rules.md  dashboard-template.md  funding-event-rules.md  glossary.md  indicator-rules.md  output-templates.md  price-zone-rules.md  scoring-model.md  stage-classification.md  workflow.md
a-share-market-structure-analyzer/scripts/: indicator_calculator.py  position_risk_calculator.py  price_zone_engine.py  score_engine.py
deploy/: README.md  deploy_vps.sh  sync_to_vps.sh
deploy/nginx/: tquant.conf
tests/: test_pipeline.py  test_web.py
tquant/: __init__.py  cli.py  config.py  io.py  report.py  sample_data.py  workflow.py
tquant/core/: __init__.py  backtest.py  execution_plan.py  features.py  profile.py  signals.py
tquant/trading/: __init__.py  journal.py  optimizer.py
tquant_web/: __init__.py  app.py  viewmodels.py
tquant_web/static/: app.css
tquant_web/templates/: base.html  dashboard.html  data.html  journal.html  optimize.html  outputs.html  stock_detail.html  watchlist.html
