[project]
name = "a-share-t0-assistant"
version = "0.1.0"
description = "Fixed watchlist A-share intraday T assistant with factors, signals, backtests, and reports."
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "Flask>=3.0",
  "gunicorn>=21.2",
  "akshare>=1.16",
  "tabulate>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
